--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,32 +9,7 @@
 
 @layer components {
     p {
-        @apply tracking-body-d leading-6;
+        @apply tracking-body-d leading-6 font-medium;
     }
 }
 
-* {
-    scrollbar-width: thin;
-    scrollbar-color: var(--secondary) var(--primary);
-}
-
-/* width */
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #555;
-}
