--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+}
 
 [x-cloak] {
     display: none;
