--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,11 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 #map {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100%;
+    height: 400px; /* The height is 400 pixels */
+    width: 100%; /* The width is the width of the web page */
 }
 
 [x-cloak] {
@@ -42,12 +41,6 @@ body {
         opacity: 1;
     }
 }
-
-.box {
-    /*opacity: 0;*/
-}
-
-
 
 .fade-in,
 .fade-in-grid,
