--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,10 @@ h1, h2, h3, h4, h5, h6 {
     @apply text-black dark:text-white;
 }
 
+h4 {
+    @apply tracking-body-d;
+}
+
 #map {
     height: 400px; /* The height is 400 pixels */
     width: 100%; /* The width is the width of the web page */
